--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,8 @@
         },
         "files": [
             "src/Controller.php",
-            "src/Game.php",
             "src/View.php",
+            "src/Game.php",
             "src/Database.php"
         ]
     },
@@ -25,6 +25,7 @@
     ],
     "minimum-stability": "stable",
     "require": {
-        "wp-cli/php-cli-tools": "^0.12.0"
+        "wp-cli/php-cli-tools": "^0.12.0",
+        "gabordemooij/redbean": "dev-master"
     }
 }
