--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,6 @@
     "minimum-stability": "stable",
     "require": {
         "wp-cli/php-cli-tools": "^0.12.0",
-        "gabordemooij/redbean": "dev-master"
+        "gabordemooij/redbean": "^5.7"
     }
 }
